<resources>
    <string name="app_name">My Application</string>
    <string name="user_name_default">请登录</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <string name="register_describer">没有账号，前往注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="account_describer">11位手机号码</string>
    <string name="password_describer">6位密码</string>
    <string name="repeat_password_describer">重复密码</string>
    <string name="security_question_describer">密保问题（用于找回密码）</string>
    <string name="security_question_answer_describer">请输入密保问题答案</string>
    <string name="security_question">密保问题</string>
    <string name="answer">答案</string>
    <string name="reset_password">重置密码</string>
    <string name="un_register">注销账号</string>
    <string name="reset_new_password">新的密码</string>
    <string name="phone_format_error">手机号码格式错误</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="password_length_no_enough">请输入6位密码</string>
    <string name="password_repeat_no_same">与第一次输入的密码不同</string>
    <string name="security_question_empty">密保问题不能为空</string>
    <string name="security_answer_empty">密保问题答案不能为空</string>
    <string name="security_answer_error">密保问题答案错误</string>
    <string name="register_success">注册成功</string>
    <string name="register_repeat">用户已存在</string>
    <string name="register_fail">注册失败</string>
    <string name="login_success">登陆成功</string>
    <string name="login_no_account">此账户不存在</string>
    <string name="login_no_password">密码错误</string>
    <string name="update_password_fail">密码修改失败</string>
    <string name="update_password_success">密码修改成功</string>
    <string name="un_register_success">注销成功</string>
    <string name="un_register_fail">注销失败</string>
    <string name="order_up_chapter_list">升序</string>
    <string name="order_down_chapter_list">降序</string>
    <string name="book_set_chapter">章节</string>
    <string name="book_brightness">亮度</string>
    <string name="book_size">字号</string>
    <string name="book_current_size">当前字号</string>
    <string name="simulation">仿真</string>
    <string name="cover">覆盖</string>
    <string name="scroll">滚动</string>
    <string name="slide">滑动</string>
    <string name="none">无</string>
    <string name="bluetooth">蓝牙传输</string>
    <string name="send_file">发送文件</string>
    <string name="receiver_file">接收文件</string>
    <string name="book_brightness_follow_system">亮度跟随系统</string>
    <string name="search_descriptor">搜索书名或作者名称</string>
    <string name="recommend">推荐</string>
    <string name="read">阅读</string>
    <string name="history">搜索历史</string>
    <string name="ranking">排行</string>
    <string name="shelf">书架</string>
    <string name="check_detail">查看详情</string>
    <string name="intro">简介</string>
    <string name="add_book_shelf">加书架</string>
    <string name="shelfed">已加入</string>
    <string name="like">收藏</string>
    <string name="read_history">浏览历史</string>
    <string name="add_you_like">添加你喜欢的小说</string>
    <string name="skip">跳过</string>
    <string name="quit">再按一次退出APP</string>
    <string name="quit_read_page">再按一次退出阅读页面</string>
    <string name="wifi_transmission">wifi传书</string>
    <string name="bluetooth_transmission">蓝牙传书</string>
    <string name="loading">加载中...</string>
    <string name="wifi_des">请在电脑浏览器的地址栏输入</string>
    <string name="wifi_ps">确保您的电脑和手机在同一局域网内,\nWIFI传书过程中不要关闭此页面</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="wifi_read">成功收到文件%s，是否前往阅读</string>
    <string name="current_chapter_no_exist">当前章节不存在</string>
    <string name="cache_chapter_count">缓存章节数</string>
    <string name="setting">设置</string>
    <string name="delete_all_history">删除全部搜索历史</string>
    <string name="remove">移除</string>
    <string name="liked">已收藏</string>
    <string name="system_fonts">系统字体</string>
</resources>