<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <include
        layout="@layout/merge_toolbar"/>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp"
            android:id="@+id/account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/login_edit"
            app:hintAnimationEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_describer" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:theme="@style/login_edit"
            app:hintAnimationEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_describer"
                android:inputType="textPassword"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:theme="@style/login_edit"
            app:hintAnimationEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password_describer"
                android:inputType="textPassword"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/security_question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:theme="@style/login_edit"
            app:hintAnimationEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/security_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_question_describer"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/security_question_answer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:theme="@style/login_edit"
            app:hintAnimationEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/security_question_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_question_answer_describer" />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/register"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/register"
            android:text="@string/register"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/login_button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>