<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <include
        layout="@layout/merge_toolbar"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:id="@+id/account"
            android:textSize="25sp"
            android:textColor="@color/app.font.color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/account"
            android:id="@+id/reset_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/question_content_layout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/question_describer"
                    android:layout_marginTop="16dp"
                    android:text="@string/security_question"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/app.font.second.color"
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



                <TextView
                    android:id="@+id/question"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/app.font.second.color"
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/answer_layout"
                    app:layout_constraintTop_toBottomOf="@id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:theme="@style/login_edit"
                    app:hintAnimationEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/app.font.color"
                        android:hint="@string/security_question_answer_describer" />
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>





            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:id="@+id/new_password_layout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:theme="@style/login_edit"
                    app:hintAnimationEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reset_new_password"
                        android:textColor="@color/app.font.color"
                        android:inputType="textPassword"
                        android:maxLength="6" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repeat_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:theme="@style/login_edit"
                    app:hintAnimationEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/repeat_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repeat_password_describer"
                        android:textColor="@color/app.font.color"
                        android:inputType="textPassword"
                        android:maxLength="6" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>








        <Button
            android:id="@+id/commit"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/reset_layout"
            android:text="@string/commit"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/login_button_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>