<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/search_edit_layout"
        android:layout_marginRight="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/shape_search"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/search" />

            <com.kai.view.ClearAbleEditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="3dp"
                android:background="@null"
                android:hint="@string/search_descriptor"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColorHint="@color/app.font.second.color"
                android:textColor="@color/app.font.color"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="取消"
            android:textColor="@color/app.font.color"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_margin="16dp"
        android:id="@+id/descriptor_layout"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/recommend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/recommend"
                    android:textColor="@color/app.font.color"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.kai.common.view.FlowLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/recommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="8dp"
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/history"
                        android:textColor="@color/app.font.color"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>


                    <ImageView
                        android:id="@+id/delete"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/trash"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/history_list"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/refresh_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.classic.common.MultipleStatusView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.classic.common.MultipleStatusView>

        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>